added dev container, docker file change

--- a/spring-native-image/Dockerfiles/Dockerfile
+++ b/spring-native-image/Dockerfiles/Dockerfile
@@ -41,5 +41,5 @@ FROM docker.io/oraclelinux:8-slim
 EXPOSE 8080
 
 # Copy the native executable into the containers
-COPY --from=builder /build/target/jibber .
+COPY --from=builder /build/target/benchmark-jibber .
 ENTRYPOINT ["/jibber"]
